Added sound effects on cloud

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,9 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/UnrealProject")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="UnrealProjectGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GameDefaultMap=/Game/UnrealProject/Maps/Map_GameMap.Map_GameMap
+EditorStartupMap=/Game/UnrealProject/Maps/Map_GameMap.Map_GameMap
+GameInstanceClass=/Script/UnrealProject.UnrealGameInstance
+GlobalDefaultGameMode=/Game/UnrealProject/Blueprints/GM_Unreal.GM_Unreal_C
+
