--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -17,3 +17,17 @@ EditorStartupMap=/Game/UnrealProject/Maps/Map_GameMap.Map_GameMap
 GameInstanceClass=/Script/UnrealProject.UnrealGameInstance
 GlobalDefaultGameMode=/Game/UnrealProject/Blueprints/GM_Unreal.GM_Unreal_C
 
+[/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
+bEnablePlugin=True
+bAllowNetworkConnection=True
+SecurityToken=9DCAD91B47D7F4A1C7BEBEA6196809EA
+bIncludeInShipping=False
+bAllowExternalStartInShipping=False
+bCompileAFSProject=False
+bUseCompression=False
+bLogFiles=False
+bReportStats=False
+ConnectionType=USBOnly
+bUseManualIPAddress=False
+ManualIPAddress=
+
